<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">The One Minute Phrasebook</string>

	<string name="locale_label">Locale: </string>
	<string name="locale">"World-Wide"</string>

	<string name="hello_label">Greet Someone: </string>
	<string name="hello">Hello!</string>

	<string name="goodbye_label">Say Farewell: </string>
	<string name="goodbye">Goodbye!</string>

	<string name="please_label">Say Please: </string>
	<string name="please">Please</string>

	<string name="thankyou_label">Thank Someone:</string>
	<string name="thankyou">Thank You!</string>

	<string name="help_label">Call for Aid: </string>
	<string name="help">Help!</string>

	<string name="flag_label">Flag: </string>
	<string name="map_label">Map: </string>

	<string name="cia_factbook_label">CIA World Factbook URL: </string>
	<string name="cia_factbook_url">"https://www.cia.gov/library/publications/the-world-factbook/index.html"</string>

    <string name="map_location">geo:0,180?z=2</string>
</resources>
