<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_gravity="center">
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TableLayout android:id="@+id/TableLayout01"
				android:layout_margin="@dimen/phrase_margin" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:stretchColumns="1">
				<TableRow android:id="@+id/TableRow01"
					android:layout_height="wrap_content" android:layout_width="wrap_content">
					<TextView android:id="@+id/TextView_LocaleLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/locale_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/locale_color"></TextView>
					<TextView android:id="@+id/TextView_Locale"
						android:layout_height="wrap_content" android:text="@string/locale"
						android:textSize="@dimen/phrase_size" android:textColor="@color/phrase_color"
						android:layout_width="wrap_content" android:layout_gravity="right"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow02"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_HelloLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/hello_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/label_color"></TextView>
					<TextView android:id="@+id/TextView_Hello"
						android:layout_height="wrap_content" android:text="@string/hello"
						android:textSize="@dimen/phrase_size" android:layout_width="wrap_content"
						android:textColor="@color/phrase_color" android:layout_gravity="right"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow03"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_GoodbyeLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/goodbye_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/label_color"></TextView>
					<TextView android:id="@+id/TextView_Goodbye"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/goodbye" android:textSize="@dimen/phrase_size"
						android:textColor="@color/phrase_color" android:layout_gravity="right"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow04"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_PleaseLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/please_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/label_color"></TextView>
					<TextView android:id="@+id/TextView_Please"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/please" android:textSize="@dimen/phrase_size"
						android:textColor="@color/phrase_color" android:layout_gravity="right"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow05"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_ThankyouLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/thankyou_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/label_color"></TextView>
					<TextView android:id="@+id/TextView_Thankyou"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/thankyou" android:textSize="@dimen/phrase_size"
						android:textColor="@color/phrase_color" android:layout_gravity="right"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow06"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_HelpLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/help_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/label_color"></TextView>
					<TextView android:id="@+id/TextView_help"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/help" android:textSize="@dimen/phrase_size"
						android:textColor="@color/phrase_color" android:layout_gravity="right"></TextView>
				</TableRow>
			</TableLayout>
			<TableLayout android:id="@+id/TableLayout02"
				android:layout_margin="@dimen/phrase_margin" android:layout_height="wrap_content"
				android:layout_width="fill_parent">
				<TableRow android:id="@+id/TableRow07"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_FlagLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/flag_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/label_color"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow08"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<ImageView android:id="@+id/ImageView01"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:src="@drawable/flag" android:adjustViewBounds="true"
						android:saveEnabled="true"></ImageView>
				</TableRow>
				<TableRow android:id="@+id/TableRow09"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_MapLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/map_label" android:textSize="@dimen/phrase_size"
						android:textColor="@color/label_color"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow10"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<ImageView android:id="@+id/ImageViewMap"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:src="@drawable/map"></ImageView>
				</TableRow>
				<TableRow android:id="@+id/TableRow11"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_CIAFactbookLabel"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textSize="@dimen/phrase_size" android:textColor="@color/label_color"
						android:text="@string/cia_factbook_label"></TextView>
				</TableRow>
				<TableRow android:id="@+id/TableRow12"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:id="@+id/TextView_help"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textSize="@dimen/phrase_size" android:textColor="@color/phrase_color"
						android:layout_gravity="right" android:text="@string/cia_factbook_url"
						android:autoLink="web"></TextView>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
